# Dp-Homework3-3

./: CMakeLists.txt  ConsoleLogCommand.cpp  ConsoleLogCommand.h  ErrorProcessor.cpp  ErrorProcessor.h  FatalErrorProcessor.cpp  FatalErrorProcessor.h  FileLogCommand.cpp  FileLogCommand.h  LogCommand.h  LogMessage.cpp  LogMessage.h  LogMessageProcessor.cpp  LogMessageProcessor.h  LogMessageType.h  README.MD  UnknownMessageProcessor.cpp  UnknownMessageProcessor.h  WarningProcessor.cpp  WarningProcessor.h  main.cpp
